  on the classic Vincent algorithm.
- Mask editor tool: Fill voids handles correctly different connectivity of
  grain exterior, noticeable for grains separated only by thin lines.  It is
  also possible to fill only simple-connected grains.
- Pixmap: Vertical and horizontal rulers always use the same number format.
  The gap between image and false colour map can be adjusted, as well as the
  gap beteween the inset scale bar and image border.
- Affine distortion: The ACF image can be zoomed.
- NT-MDT: Double inversion of new spectroscopy data properly checked and fixed.
- Slope distribution: Masking is supported.  Plot of total gradient was added.

Other:
- The standalone Python gwy module uses the correct extension for dlopening,
  fixing the failure to load Gwyddion libraries on OS X.


2.36 (2014-04-02)
Application:
- Translations updated: Czech, French, Russian.

Libraries:
- libgwydgets: Igor Pro .itx graph ASCII export option was added.
- libgwyprocess: Function gwy_data_field_extend() for extending data fields
  with various exterior handling types was added.
- libgwyprocess: A function for Euclidean distance transform of a mask was
  added.
- libgwyapp: gwy_app_wait_start() always creates a progress/cancel dialog,
  even if no parent window is passed.
- libgwyprocess: Grain quantities characterising the moment-equivalent
  ellipses of grains (axis lengths and orientation) were added.
- libgwymodules: Function for obtaining the file name of a container was
  added (mostly useful for pygwy).
- libgwyddion: A GString in-place substring replacement function was added.
- libgwyddion: A function for conversion of text to native EOLs was added.

Modules:
- Columnar synthesis (new): Simulation of columnar film growth.
- Wave synthesis (new): Composes images using interference of waves from a
  number of point sources.
- Euclidean distance transform (new): Creates a data field representing the
  distance transform of given mask.